# foods_menu_api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.env  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  test.env
.github/workflows/: coverage.yml  linter.yml  tests.yml
menu_app/: cache.py  database.py  dish_model.py  main.py  menu_model.py  models.py  submenu_model.py
menu_app/crud/: crud_base.py  crud_dish.py  crud_menu.py  crud_submenu.py
menu_app/models/: dish_model.py  menu_model.py  submenu_model.py
migrations/: env.py
migrations/versions/: 00afbedd0655_migrate.py  07673f752735_migrate.py  2f7e8dd75171_init.py  38170db84760_migrate.py  39a6de4efae8_migrate.py  49453b276bf1_migrate.py  5968f491c2da_migrate.py  5e030f46185a_migrate.py  69d38a7e4df4_migrate.py  75036cb19a15_migrate.py  8c25bdca4e3d_migrate.py  8e0cf41c5fa0_migrate.py  9722b90daae8_migrate.py  9e2883981eac_migrate.py  b910da6fd613_migrate.py  bca3681cfa76_init.py  c9c9d712dc9f_migrate.py  e626b1726b89_migrate.py  f9de9510ae02_migrate.py
tests/: conftest.py  test_cascade_delete.py  test_counts.py  test_dish.py  test_menu.py  test_menu_app.py  test_submenu.py
