[tool.poetry]
name = "foods-menu-api"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "foods_menu_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
flake8 = "^6.0.0"
alembic = "^1.9.1"
psycopg2-binary = "^2.9.5"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
