[tool.poetry]
name = "foods-menu-api"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "menu_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
alembic = "^1.9.1"
sqlmodel = "^0.0.8"
pytest = "^7.2.1"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
anyio = "^3.6.2"
pytest-asyncio = "^0.20.3"
aiosqlite = "^0.18.0"
trio = "^0.22.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
